#Déclaration du projet

project(InfoFond)

#Déclaration de l'exécutable

add_executable(

        Question

        Global.hpp

        Heap.hpp

        main.cpp

        Parser.cpp

        Parser.h

        Problem.cpp
        
        Problem.h
        
        Problem2.cpp
        
        Problem2.h
            
        Problem3.cpp
        
        Problem3.h
        
        Solver.cpp
        
        Solver.hpp
        
        SolverTypes.hpp
        
        Sort.hpp
        
        VarOrder.hpp
        
        Writer.cpp
        
        Writer.h
)